# partiu

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING_PARSERS.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  generate_icons.py  load_airports.py  migrate_usernames_lowercase.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh
.github/workflows/: build.yml  pr.yml
alembic/: env.py
alembic/versions/: 0001_baseline_schema.py  0002_trip_documents.py  0003_trip_sharing.py  0004_trip_day_notes.py  0005_notif_new_flight_and_unread.py  0006_notifications_inbox.py  0007_trip_rating_and_note.py  0008_sync_progress.py  0009_failed_email_llm_verdict.py  0010_non_flight_domains.py  0011_airport_aliases.py  0012_drop_last_rules_version.py  0013_drop_failed_emails.py  (+5 more)
backend/: aircraft_api.py  aircraft_sync.py  audit_log.py  auth.py  boarding_pass_extractor.py  config.py  crypto.py  database.py  email_anonymizer.py  email_cache.py  failed_email_queue.py  flight_status_sync.py  flight_store.py  grouping.py  i18n.py  immich.py  llm_parser.py  main.py  middleware.py  non_flight_domains.py  notifications_store.py  push.py  push_notifications.py  scheduler.py  shares.py  smtp_server.py  sync_job.py  timezone_utils.py  trip_images.py  utils.py
frontend/: capture.cjs  eslint.config.js  index.html  manifest.json  package-lock.json  package.json  playwright.config.ts  svelte.config.js  sw.js  tsconfig.json  vite.config.ts
scripts/: seed_demo.py
tests/: conftest.py
tools/: anonymize_eml.py  parse_eml.py
(+220 files in other folders)
