[project]
name = "partiu"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "apscheduler>=3.10.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "timezonefinder>=6.2.0",
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",
    "aiosmtpd>=1.4.0",
    "bcrypt>=4.0.0",
    "itsdangerous>=2.1.0",
    "pyotp>=2.9.0",
    "slowapi>=0.1.9",
    "pywebpush>=2.0.0",
    "cryptography>=41.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.3.0",
    "ty>=0.0.1a1",
    "vulture>=2.11",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",  # line too long (handled per-file where needed)
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/*" = ["F401"]  # test files may re-export for fixture use

[tool.pytest.ini_options]
# pytest config is kept in pytest.ini
